# ChangeLog for app-misc/cl-desktop-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-desktop-meta-10.8.81.ebuild:
  Moved Chromium browser from cls-meta.

  24 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-desktop-meta-10.8.81.ebuild:
  Migrate to virtual/ooo

  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-desktop-meta-10.8.81.ebuild:
  Moved www-plugins/adobe-flash from cls-meta

  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-desktop-meta-10.8.81.ebuild:
  Added vim from cl-useful-meta

*cl-desktop-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-desktop-meta-10.5.83.ebuild, +cl-desktop-meta-10.8.81.ebuild:
  New version of meta-package.

  07 Jul 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-desktop-meta-10.5.83.ebuild:
  added net-misc/ntp

*cl-desktop-meta-10.5.83 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-desktop-meta-10.5.83.ebuild:
  version bump
