@@ -1,2 +1,2 @@
-EBUILD cl-desktop-meta-10.8.81.ebuild 1670 RMD160 e984b7bb72732dc986962c435a62b8ae6b436657 SHA1 415f9377aa7b00007cf929e35c780e3d443bfc33 SHA256 8a90b2d57466f7f4ee4c4bb806ecdc66377f926fdedc1dcc0d883ebc7f29373c
-MISC ChangeLog 1150 RMD160 d2a65938ee3651a7c09aa291a8e04efa6bc2d19f SHA1 ae74cdd811f1d547f9c8d05333f04aade74e7424 SHA256 ffc34de9f2cf190847a048fe66d2fe42b93954f84f2fd27e1bbc7aba6954fa01
+EBUILD cl-desktop-meta-10.8.81.ebuild 1684 RMD160 93adf6175c1642ec9ffc497906a2b9d189faa390 SHA1 3141451ba25f81cb7ca3723e51410e5095706f7b SHA256 9a0158ed7a8760d5fd19351df6268cad84a316361cdc06f3087c0d606107cc7a
+MISC ChangeLog 1264 RMD160 f34088d97e76940f6c88fcadd8812daf468e118a SHA1 b4491198e97c041ca28f4bf68395a24c4960f788 SHA256 c9cafd8586d711dad82f7073be138d36eaba20515bebf2b48290f0a9eeaae4ab
