@@ -1,4 +1,4 @@
 EBUILD cldg-meta-10.4.ebuild 5760 RMD160 98ac2684e9f09f8c971eafe3ef26a42a82d1ee83 SHA1 03fad2f39bc755eb620347c5936341961c927809 SHA256 b1fb04cb0a142f9a70a2e9609458023fad1439cf309293ab0f186e19d7d91653
-EBUILD cldg-meta-10.8.81.ebuild 1612 RMD160 2ee265e9733a83077d5c7d4edc609f7a0f9a3c86 SHA1 7cfebf45861f3becb71e31409cf56b59c6f902e8 SHA256 75d8a926b593a9fb841f3a98e683aec05b42166d2c0a4405c322037cb629f336
-MISC ChangeLog 1843 RMD160 e9456e622a235a1e0bf04b9dbb49a3bdba8819ff SHA1 62dfbfe41ea4586ad1d983327963b0f452c9b233 SHA256 2a0174a38b9a9036c7e56acd3431eb718575909d0737f3175882e1a0f32155a7
+EBUILD cldg-meta-10.8.81.ebuild 1606 RMD160 7a4a55ad72a323b644a461dfcddff4fd5ea85f04 SHA1 279fa9f35681e564d19529cefe44a911b1a3adb6 SHA256 d92eecae43c386377b9ddb600b8826b2b72b0c9eb50e98be26966050562a9673
+MISC ChangeLog 1985 RMD160 f161803a1f6dc54545ad824b86a3adbe8db876f2 SHA1 9960d237b131046dd2bc19ee9a93151142164421 SHA256 c2143fb6cc1d8f7417017862fed37c34d07dc40d0f96711f054bd85b5ba4d2ff
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
