@@ -41,8 +41,8 @@ RDEPEND="${RDEPEND}
 	net-im/pidgin
 	net-irc/xchat
 	net-misc/pino
+	net-p2p/deluge
 	net-p2p/linuxdcpp
-	net-p2p/transmission
 	x11-plugins/pidgin-facebookchat
 	x11-plugins/pidgin-hotkeys
 "
