@@ -1,4 +1,4 @@
 EBUILD cldx-meta-10.4-r1.ebuild 3190 RMD160 2fe8ee33efc82641086b325d987dbdf5dbe2cd06 SHA1 156ec21a6fae4272ee7ea07b160caf476a97ab48 SHA256 ebe7a47a02a28a9ad59c10cd2b4d916a13b5ce9639ec93247d87ba3bb081dbc3
-EBUILD cldx-meta-10.8.81.ebuild 1896 RMD160 f7d013745adada06677aef984fe231eeb02876d7 SHA1 94fba572187c61a695abcd0b56b1867be6ff3eea SHA256 c0a1a37e1fc463cc2d632cec4c1be2f44e802e27a65c184f7016b60027209604
-MISC ChangeLog 2722 RMD160 12f464abcece9bc1e70e31a5a93bfc849b3c3734 SHA1 eff77611fe72a049f5f9a76df29be4648e12e51d SHA256 645e5835055138a0284be66f9861578893e134042bc41a5bf132d0a3b4c64dd3
+EBUILD cldx-meta-10.8.81.ebuild 1890 RMD160 cf9ee720a8171a4dc816dcffabd997474c1b54cb SHA1 9d379f6e4f9a6578fd71b21f1f38277f92793035 SHA256 fccd6a8bd63223317f75fe6e8ae92bfaf731924141d85da93a99d7fc720193dd
+MISC ChangeLog 2865 RMD160 8cf4e74bffa4a7ff50edf6d9646923a3afbea1c3 SHA1 6af196af736befdc19cb9ee9bed59fdf83bc8c80 SHA256 d07fa69499645f154fd8ddbd12711231c9acb95e2446004fbc5e7b5394def25c
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
