@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cldx-meta-10.8.81.ebuild:
+  Added Deluge p2p client, removed Transmission.
+
   23 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cldx-meta-10.8.81.ebuild:
   Added gdm instead slim.
